Try and fix color dark mode bug for iOS iPhone browser.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ canvas {
 
 @media (prefers-color-scheme: light) {
   .hero {
-    background-color: #f5d54730;
+    background-color: #f5d54730 !important;
   }
 }
 .hero-title {
